Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8184

System environment values encoding corrupted

    XMLWordPrintable

Details

    • 0cd5e277c19a115ddede6a01327fdabad176cb89

    Description

      My windows user name was created in Russian locale. QtCreator corrupts all user-related environment variables values in build/run configuration. See attached picture.

      Attachments

        1. 1.png
          35 kB
          Paul Kolomiets
        For Gerrit Dashboard: QTCREATORBUG-8184
        # Subject Branch Project Status CR V

        Activity

          People

            dt Daniel Teske
            kolam Paul Kolomiets
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes