Utils::Environment: Use systemEnvironment from QProcessEnvironment

The QProcessEnvironment::systemEnvironment() uses the function
GetEnvironmentStringsW(), which allows for retrieving values that can
not be encoded in the current locale.

Also see QTCREATORBUG-8184 for a related bug.

Change-Id: Id7c9b8c881db7ba2efd13f2fb241fbbdb9d2a7eb
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>
Reviewed-by: Daniel Teske <daniel.teske@digia.com>